--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
 
 <body>
-  <h1>Julian Diaz Lombardo</h1>
-  <p>Behold, horrors beyond our human comprehension</p>
+  <h1>Behold, horrors beyond our human comprehension</h1>
+  <p>Please god, let it knows what mercy is...</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
-
+<footer>
+  <a href= "#"> click to link your soul </a>
+</footer>
 </html>
