--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <body>
   <h1>Behold, horrors beyond our human comprehension</h1>
-  <p>Please god, let it knows what mercy is...</p>
+  <p>Please god, let it know what mercy is...</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
 <footer>
